fix: add text align center to h1

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,8 @@ h1 {
     font-size: 54px;
 
     color: var(--fg);
+
+    text-align: center;
 }
 
 .arrow {
